playbook/roles/defaultpage/files/defaultpage-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: page-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1 
spec:
  rules:
     - http:
        paths:
          - path: / 
            pathType: Prefix
            backend:
              service:
                name: defaultpage-service 
                port:
                  number: 8000
